<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="465dp"
    android:layout_gravity="center"
    android:background="@drawable/layoutstyle"

    android:orientation="vertical"
    android:padding="10dp"
    >


    <TextView
        android:id="@+id/cancelfeedback"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="end"
        android:background="@drawable/circlebackground"
        android:gravity="center"
        android:text="@string/x"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="329dp"
        android:layout_height="56dp"
        android:gravity=""
        android:text="@string/is_this_useful"
        android:textColor="#050505"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="303dp"
        android:layout_height="74dp">

        <RadioButton
            android:id="@+id/yesRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/noRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity=""
        android:text="@string/the_data_you_provide_helps_improve_this_application"
        android:textColor="#0E0D0D" />

    <Button
        android:id="@+id/sendbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonstyle"
        android:text="@string/send" />



</LinearLayout>